Fix spacing between 2nd and 3rd videos.

--- a/youmu/static/sass/breakpoints/_regular.scss
+++ b/youmu/static/sass/breakpoints/_regular.scss
@@ -28,5 +28,9 @@
             font-size: ms(1);
         }
     }
+
+    .second {
+        margin-bottom: $gutter / 2;
+    }
 }
 
